refactor(various): add custom listen & emit events handler

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="">
+    <link rel="icon" type="image/png" href="assets/icon-lib.svg#logo-mini">
     <link rel="stylesheet" href="styles/style.css">
     <title>Les Petits Plats</title>
 </head>
@@ -26,17 +26,11 @@
                     </svg>
                 </span>
             </label>
+            <select-box></select-box>
         </div>
         <div class="active-tags">
             <ul class="active-tags__container">
-                <li class="active-tags__item bg-blue">
-                    <span>Tag name</span>
-                    <button class="active-tags__remove">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="assets/icon-lib.svg#remove"></use>
-                        </svg>
-                    </button>
-                </li>
+                <!-- Content will be added dynamically-->
             </ul>
         </div>
         <div class="filters__options options">
