--- a/index.html
+++ b/index.html
@@ -34,27 +34,28 @@
             </ul>
         </div>
         <div class="filters__options options">
-            <div data-type="ingredients" class="tag-box options__select bg-blue">
-                <label class="tag-box__trigger">
-                    <input class="tag-box__value" type="search" placeholder="Rechercher un ingrédient" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
+            <div data-type="ingredients" class="select-box options__select bg-blue">
+                <label class="select-box__trigger">
+                    <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ingrédient" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
                 </label>
-                <div class="tag-box__container" role="listbox">
+                <div class="select-box__list" role="listbox">
                     <!-- Content will be added dynamically-->
                 </div>
             </div>
-            <div data-type="appliance" class="tag-box options__select bg-green">
-                <label class="tag-box__trigger">
-                    <input class="tag-box__value" type="search" placeholder="Rechercher un appareil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
+            <div data-type="appliance" class="select-box options__select bg-green">
+                <label class="select-box__trigger">
+                    <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un appareil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
                 </label>
-                <div class="tag-box__container" role="listbox">
+                <div class="select-box__list" role="listbox">
                     <!-- Content will be added dynamically-->
                 </div>
             </div>
-            <div data-type="ustensils" class="tag-box options__select bg-red">
-                <label class="tag-box__trigger">
-                    <input class="tag-box__value" type="search" placeholder="Rechercher un ustensils" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
+
+            <div data-type="ustensils" class="select-box options__select bg-red">
+                <label class="select-box__trigger">
+                    <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ustensil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
                 </label>
-                <div class="tag-box__container" role="listbox">
+                <div class="select-box__list" role="listbox">
                     <!-- Content will be added dynamically-->
                 </div>
             </div>
