refactor(various): fix event listener bug on select box inputs

--- a/index.html
+++ b/index.html
@@ -33,30 +33,32 @@
                 <!-- Content will be added dynamically-->
             </ul>
         </div>
-        <div class="filters__options options">
-            <div data-type="ingredients" class="select-box options__select bg-blue">
-                <label class="select-box__trigger">
-                    <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ingrédient" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
-                </label>
-                <div class="select-box__list" role="listbox">
-                    <!-- Content will be added dynamically-->
+        <div class="filters-container">
+            <div class="filters__options options">
+                <div data-type="ingredients" class="select-box options__select bg-blue">
+                    <label class="select-box__trigger">
+                        <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ingrédient" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
+                    </label>
+                    <div class="select-box__list" role="listbox">
+                        <!-- Content will be added dynamically-->
+                    </div>
                 </div>
-            </div>
-            <div data-type="appliance" class="select-box options__select bg-green">
-                <label class="select-box__trigger">
-                    <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un appareil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
-                </label>
-                <div class="select-box__list" role="listbox">
-                    <!-- Content will be added dynamically-->
+                <div data-type="appliance" class="select-box options__select bg-green">
+                    <label class="select-box__trigger">
+                        <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un appareil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
+                    </label>
+                    <div class="select-box__list" role="listbox">
+                        <!-- Content will be added dynamically-->
+                    </div>
                 </div>
-            </div>
 
-            <div data-type="ustensils" class="select-box options__select bg-red">
-                <label class="select-box__trigger">
-                    <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ustensil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
-                </label>
-                <div class="select-box__list" role="listbox">
-                    <!-- Content will be added dynamically-->
+                <div data-type="ustensils" class="select-box options__select bg-red">
+                    <label class="select-box__trigger">
+                        <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ustensil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
+                    </label>
+                    <div class="select-box__list" role="listbox">
+                        <!-- Content will be added dynamically-->
+                    </div>
                 </div>
             </div>
         </div>
