--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                     </svg>
                 </span>
             </label>
-            <select-box></select-box>
         </div>
         <div class="active-tags">
             <ul class="active-tags__container">
@@ -34,31 +33,30 @@
         </div>
         <div class="filters-container">
             <div class="filters__options options">
-                <div data-type="ingredients" class="select-box options__select bg-blue">
+                <select-box data-type="ingredients" class="select-box options__select bg-blue">
                     <label class="select-box__trigger">
                         <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ingrédient" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
                     </label>
                     <div class="select-box__list" role="listbox">
                         <!-- Content will be added dynamically-->
                     </div>
-                </div>
-                <div data-type="appliance" class="select-box options__select bg-green">
+                </select-box>
+                <select-box data-type="appliance" class="select-box options__select bg-green">
                     <label class="select-box__trigger">
                         <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un appareil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
                     </label>
                     <div class="select-box__list" role="listbox">
                         <!-- Content will be added dynamically-->
                     </div>
-                </div>
-
-                <div data-type="ustensils" class="select-box options__select bg-red">
+                </select-box>
+                <select-box data-type="ustensils" class="select-box options__select bg-red">
                     <label class="select-box__trigger">
                         <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ustensil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
                     </label>
                     <div class="select-box__list" role="listbox">
                         <!-- Content will be added dynamically-->
                     </div>
-                </div>
+                </select-box>
             </div>
         </div>
     </form>
