--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="filters__options options">
                 <select-box data-type="ingredients" class="select-box options__select bg-blue">
                     <label class="select-box__trigger">
-                        <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ingrédient" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
+                        <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ingrédient">
                     </label>
                     <div class="select-box__list" role="listbox">
                         <!-- Content will be added dynamically-->
@@ -43,7 +43,7 @@
                 </select-box>
                 <select-box data-type="appliance" class="select-box options__select bg-green">
                     <label class="select-box__trigger">
-                        <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un appareil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
+                        <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un appareil">
                     </label>
                     <div class="select-box__list" role="listbox">
                         <!-- Content will be added dynamically-->
@@ -51,7 +51,7 @@
                 </select-box>
                 <select-box data-type="ustensils" class="select-box options__select bg-red">
                     <label class="select-box__trigger">
-                        <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ustensil" aria-labelledby="custom-select__title" role="button" aria-haspopup="listbox" aria-expanded="false">
+                        <input class="select-box__value select-box__search-input" type="search" placeholder="Rechercher un ustensil">
                     </label>
                     <div class="select-box__list" role="listbox">
                         <!-- Content will be added dynamically-->
